[package]
name = "sol-token-info"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
solana-client = "1.18.22"
solana-sdk = "1.18.22"
spl-token = "3.4.1"
dns-lookup = "2.0.4"
mpl-token-metadata = "4.1.2"
borsh = "0.9.3"
solana-program = "1.18.22"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"